--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="product:price:currency" content="IDR" />
     <meta property="product:availability" content="instock" />
     <meta itemprop="name" content="TEXAS189 Modal Receh Untuk Bermain TEXAS 189 Auto Maxwin Boss" />
-    <link rel="amphtml" href="https://daftarakunprovip.shop/amp/">
+    <link rel="amphtml" href="https://ftp.ancastercommunityskatingprogram.com/amp/" />
     <meta itemprop="url" content="https://ftp.ancastercommunityskatingprogram.com/" />
     <meta itemprop="description" content="Dengan masuk ke TEXAS189, situs game online, Anda dapat membangun jackpot Maxwin hanya dengan uang receh. Daftarlah dan mainkan semua permainan yang tersedia di TEXAS 189 dengan uang receh Anda." />
     <meta itemprop="thumbnailUrl" content="https://i.ibb.co/q01wPtK/slot-TEXAS189.jpg?format=1500w" />
@@ -34,9 +34,8 @@
     <meta name="twitter:url" content="https://ftp.ancastercommunityskatingprogram.com/" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Dengan masuk ke TEXAS189, situs game online, Anda dapat membangun jackpot Maxwin hanya dengan uang receh. Daftarlah dan mainkan semua permainan yang tersedia di TEXAS 189 dengan uang receh Anda." />
-    <meta name="description" content="Temukan LOGIN TEXAS189 ini dengan RTP tinggi dan pola gacor terlengkap 
-2024 di situs TEXAS189 terbaik dan terpercaya gampang menang jackpot 
-maxwin." />
+    <meta name="description" content="Temukan LOGIN TEXAS189 ini dengan RTP tinggi dan pola gacor terlengkap 2024 di situs TEXAS189 terbaik dan terpercaya gampang menang jackpot maxwin." />
+	<meta name="keywords" content="TEXAS189, TEXAS 189, DAFTAR TEXAS189, LOGIN TEXAS189, LINK TEXAS189, ALTERNATIF TEXAS189, SLOT TEXAS189" />
     <link rel="preconnect" href="https://images.squarespace-cdn.com">
     <script type="text/javascript" src="//use.typekit.net/ik/wgeIulgXuLIkU7YX_98KfC2tHLYe8JG8rcmhnBCV1aGfecGJXnX1IyvhF2jtFRZLFRjUZQIXFhJtFe9uw2JhwQSDweIuZ2joe6MKfcBRiAuTdKu3Scv7f6RHk3IbMg62JMJ7f6RBk3IbMg6YJMJ7f6ROk3IbMg6FJMJ7f6Rek3IbMg6sJMHbMLkGrOMe.js"></script><script>var squarespaceUrl = '/';var squareAsset = document.querySelector('link[rel="canonical"]');squareAsset.href = squarespaceUrl;</script>
     <script type="text/javascript">
