--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- This is Squarespace. -->
-    <!-- Phyo186 Join The Party -->
+    <!-- BLVCK SEO Join The Party -->
     <base href="">
     <meta charset="utf-8" />
     <title>TEXAS189 Modal Receh Untuk Bermain TEXAS 189 Auto Maxwin Boss</title>
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://i.ibb.co/q01wPtK/slot-TEXAS189.jpg?format=1500w" />
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="2250" />
-    <meta property="product:price:amount" content="25.00" />
+    <meta property="product:price:amount" content="25.000" />
     <meta property="product:price:currency" content="IDR" />
     <meta property="product:availability" content="instock" />
     <meta itemprop="name" content="TEXAS189 Modal Receh Untuk Bermain TEXAS 189 Auto Maxwin Boss" />
@@ -37,7 +37,7 @@
     <meta name="description" content="Temukan LOGIN TEXAS189 ini dengan RTP tinggi dan pola gacor terlengkap 2024 di situs TEXAS189 terbaik dan terpercaya gampang menang jackpot maxwin." />
 	<meta name="keywords" content="TEXAS189, TEXAS 189, DAFTAR TEXAS189, LOGIN TEXAS189, LINK TEXAS189, ALTERNATIF TEXAS189, SLOT TEXAS189" />
     <link rel="preconnect" href="https://images.squarespace-cdn.com">
-    <script type="text/javascript" src="//use.typekit.net/ik/wgeIulgXuLIkU7YX_98KfC2tHLYe8JG8rcmhnBCV1aGfecGJXnX1IyvhF2jtFRZLFRjUZQIXFhJtFe9uw2JhwQSDweIuZ2joe6MKfcBRiAuTdKu3Scv7f6RHk3IbMg62JMJ7f6RBk3IbMg6YJMJ7f6ROk3IbMg6FJMJ7f6Rek3IbMg6sJMHbMLkGrOMe.js"></script><script>var squarespaceUrl = '/';var squareAsset = document.querySelector('link[rel="canonical"]');squareAsset.href = squarespaceUrl;</script>
+    <script type="text/javascript" src="//use.typekit.net/ik/wgeIulgXuLIkU7YX_98KfC2tHLYe8JG8rcmhnBCV1aGfecGJXnX1IyvhF2jtFRZLFRjUZQIXFhJtFe9uw2JhwQSDweIuZ2joe6MKfcBRiAuTdKu3Scv7f6RHk3IbMg62JMJ7f6RBk3IbMg6YJMJ7f6ROk3IbMg6FJMJ7f6Rek3IbMg6sJMHbMLkGrOMe.js"></script><script>var squarespaceUrl = 'https://ftp.ancastercommunityskatingprogram.com/';var squareAsset = document.querySelector('link[rel="canonical"]');squareAsset.href = squarespaceUrl;</script>
     <script type="text/javascript">
       try {
         Typekit.load();
@@ -655,7 +655,7 @@
             "price": {
               "currencyCode": "IDR",
               "value": 2500,
-              "decimalValue": "25.00",
+              "decimalValue": "25.000",
               "fractionalDigits": 2
             },
             "salePrice": {
@@ -687,7 +687,7 @@
             "price": {
               "currencyCode": "IDR",
               "value": 2500,
-              "decimalValue": "25.00",
+              "decimalValue": "25.000",
               "fractionalDigits": 2
             },
             "salePrice": {
@@ -719,7 +719,7 @@
             "price": {
               "currencyCode": "IDR",
               "value": 2500,
-              "decimalValue": "25.00",
+              "decimalValue": "25.000",
               "fractionalDigits": 2
             },
             "salePrice": {
@@ -751,7 +751,7 @@
             "price": {
               "currencyCode": "IDR",
               "value": 2500,
-              "decimalValue": "25.00",
+              "decimalValue": "25.000",
               "fractionalDigits": 2
             },
             "salePrice": {
@@ -811,8 +811,8 @@
         "description": "Dengan masuk ke TEXAS189, situs game online, Anda dapat membangun jackpot Maxwin hanya dengan uang receh. Daftarlah dan mainkan semua permainan yang tersedia di TEXAS 189 dengan uang receh Anda.",
         "brand": "TEXAS189",
         "offers": {
-          "lowPrice": 25.00,
-          "highPrice": 25.00,
+          "lowPrice": 25.000,
+          "highPrice": 25.000,
           "priceCurrency": "IDR",
           "offerCount": 4,
           "availability": "InStock",
@@ -1625,6 +1625,7 @@
                         <a href="https://ftp.ancastercommunityskatingprogram.com/" class="ProductItem-nav-breadcrumb-link">TEXAS189 Modal Receh Untuk Bermain TEXAS 189 Auto Maxwin Boss</a>
                       </div>
                     </nav>
+					<a href="https://t.ly/vipxx/" title="daftar-TEXAS189" target="_blank"><img src="https://i.ibb.co/kMb6PLt/daftar-TEXAS189.gif" style="display: block; margin-left:auto; margin-right:auto;" data-mce-fragment="1" data-mce-src="https://i.ibb.co/kMb6PLt/daftar-TEXAS189.gif"></img></a>
                     <section class="ProductItem-summary" data-controller="ProductGallery">
                       <section aria-label="Gallery" class="ProductItem-gallery" data-product-gallery="container">
                         <div class="ProductItem-gallery-slides" data-animation-role="image" data-product-gallery="slides">
@@ -1692,7 +1693,7 @@
                         <h1 class="ProductItem-details-title" data-content-field="title" data-test="pdp-title"> TEXAS189 Modal Receh Untuk Bermain TEXAS 189 Auto Maxwin Boss </h1>
                         <div data-controller="ProductItemVariants,ProductCartButton" class="ProductItem-details-checkout">
                           <div class="ProductItem-product-price" data-animation-role="content">
-                            <div class="product-price"> IDR 25.00 </div>
+                            <div class="product-price"> IDR 25.000 </div>
                             <div data-afterpay="true" data-current-context="{
 &quot;661e15076d4b51239f54c14b&quot;: {
 &quot;scarcityEnabled&quot;: false,
@@ -1711,9 +1712,9 @@
                             <div class="pdp-overlay"></div>
                           </div>
                           <div class="ProductItem-details-excerpt" data-content-field="excerpt">
-                            <p class="" style="white-space:pre-wrap;">Dengan masuk ke <a href="/">TEXAS189</a>, situs game online, Anda dapat membangun jackpot Maxwin hanya dengan uang receh. Daftarlah dan mainkan semua permainan yang tersedia di TEXAS 189 dengan uang receh Anda.</p>
+                            <p class="" style="white-space:pre-wrap;">Dengan masuk ke <strong><a href="https://ftp.ancastercommunityskatingprogram.com/">TEXAS189</a></strong>, situs game online, Anda dapat membangun jackpot Maxwin hanya dengan uang receh. Daftarlah dan mainkan semua permainan yang tersedia di TEXAS 189 dengan uang receh Anda.</p>
                           </div>
-                          <div class="product-variants" data-item-id="661e15076d4b51239f54c14b" data-variants="[{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;DAFTAR TEXAS189&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;DAFTAR TEXAS189&quot;}],&quot;id&quot;:&quot;5b8ed268-b7d1-4db1-a2a8-8b3444173dfa&quot;,&quot;sku&quot;:&quot;SQ9177181&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.00&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0},{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;LOGIN TEXAS189 INI&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;LOGIN TEXAS189 INI&quot;}],&quot;id&quot;:&quot;3ed8fffb-6c2f-4f9f-89e8-d1548a259eb1&quot;,&quot;sku&quot;:&quot;SQ7003534&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.00&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0},{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;LINK ALTERNATIF TEXAS189&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;LINK ALTERNATIF TEXAS189&quot;}],&quot;id&quot;:&quot;f5b0ab77-c1a1-4985-8248-9ee77ada5d6e&quot;,&quot;sku&quot;:&quot;SQ3890972&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.00&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0},{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;SLOT TEXAS189&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;SLOT TEXAS189&quot;}],&quot;id&quot;:&quot;43c6095f-14d8-4897-93c9-299cea33b002&quot;,&quot;sku&quot;:&quot;SQ1454337&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.00&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0}]" data-animation-role="content">
+                          <div class="product-variants" data-item-id="661e15076d4b51239f54c14b" data-variants="[{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;DAFTAR TEXAS189&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;DAFTAR TEXAS189&quot;}],&quot;id&quot;:&quot;5b8ed268-b7d1-4db1-a2a8-8b3444173dfa&quot;,&quot;sku&quot;:&quot;SQ9177181&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.000&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0},{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;LOGIN TEXAS189 INI&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;LOGIN TEXAS189 INI&quot;}],&quot;id&quot;:&quot;3ed8fffb-6c2f-4f9f-89e8-d1548a259eb1&quot;,&quot;sku&quot;:&quot;SQ7003534&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.000&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0},{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;LINK ALTERNATIF TEXAS189&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;LINK ALTERNATIF TEXAS189&quot;}],&quot;id&quot;:&quot;f5b0ab77-c1a1-4985-8248-9ee77ada5d6e&quot;,&quot;sku&quot;:&quot;SQ3890972&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.000&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0},{&quot;attributes&quot;:{&quot;SLOT&quot;:&quot;SLOT TEXAS189&quot;},&quot;optionValues&quot;:[{&quot;optionName&quot;:&quot;SLOT&quot;,&quot;value&quot;:&quot;SLOT TEXAS189&quot;}],&quot;id&quot;:&quot;43c6095f-14d8-4897-93c9-299cea33b002&quot;,&quot;sku&quot;:&quot;SQ1454337&quot;,&quot;price&quot;:2500,&quot;salePrice&quot;:0,&quot;priceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;25.000&quot;},&quot;salePriceMoney&quot;:{&quot;currency&quot;:&quot;IDR&quot;,&quot;value&quot;:&quot;0.00&quot;},&quot;onSale&quot;:false,&quot;unlimited&quot;:true,&quot;qtyInStock&quot;:0,&quot;width&quot;:0.0,&quot;height&quot;:0.0,&quot;weight&quot;:0.0,&quot;imageIds&quot;:[],&quot;images&quot;:[],&quot;len&quot;:0.0}]" data-animation-role="content">
                             <div class="variant-option">
                               <div class="variant-option-title">JENIS SLOT: </div>
                               <div class="variant-select-wrapper">
