--- a/amp/index.html
+++ b/amp/index.html
@@ -451,17 +451,17 @@
             <div class="pikachu"><br>
                 <amp-img class="home-button" src="https://i.ibb.co/KLptpm7/TEXAS189-icon.png" width="300" height="60"></amp-img><br><br>
                 <div class="selolee-container block1">
-                    <a href="https://t.ly/vvipx"><button class="selolee"><img src="https://i.ibb.co/0X28VVX/1TEXAS189-icon.png" width="20px"></button></a>
-                    <a href="https://t.ly/vvipx"><button class="selolee"><img src="https://i.ibb.co/GdVyQNw/2TEXAS189-icon.png" width="20px"></button></a>
-                    <a href="https://t.ly/vvipx"><button class="selolee"><img src="https://i.ibb.co/SfsZWXB/3TEXAS189-icon.png" width="20px"></button></a>
-                    <a href="https://t.ly/vvipx"><button class="selolee"><img src="https://i.ibb.co/Yt1Fk2p/4TEXAS189-icon.png" width="20px"></button></a>
+                    <a href="https://t.ly/vipxx"><button class="selolee"><img src="https://i.ibb.co/0X28VVX/1TEXAS189-icon.png" width="20px"></button></a>
+                    <a href="https://t.ly/vipxx"><button class="selolee"><img src="https://i.ibb.co/GdVyQNw/2TEXAS189-icon.png" width="20px"></button></a>
+                    <a href="https://t.ly/vipxx"><button class="selolee"><img src="https://i.ibb.co/SfsZWXB/3TEXAS189-icon.png" width="20px"></button></a>
+                    <a href="https://t.ly/vipxx"><button class="selolee"><img src="https://i.ibb.co/Yt1Fk2p/4TEXAS189-icon.png" width="20px"></button></a>
                 </div>
                 <br>
-                <div><a href="https://t.ly/vvipx" target="_blank" rel="noopener noreferrer nofollow">
+                <div><a href="https://t.ly/vipxx" target="_blank" rel="noopener noreferrer nofollow">
                 <amp-img height="210" width="300" alt="AKUN GACOR SLOT GACOR" src="https://i.ibb.co/M938rkV/SLOT-TEXAS189.gif"></amp-img></a>
                 </div>
                 <h2>Slot Yang Lagi Virall💸</h2>
-                <div class="seoasekalee"><a href="https://t.ly/vvipx" target="_blank" rel="noopener noreferrer nofollow">
+                <div class="seoasekalee"><a href="https://t.ly/vipxx" target="_blank" rel="noopener noreferrer nofollow">
                         <button class="btn2"><strong>AKUN GACOR VVIP TEXAS189</strong>
                         <div id="container-stars">
                         <div id="stars"></div>
@@ -472,8 +472,8 @@
                             </div>
                         </button></a>
                         <br>
-                    <a href="https://t.ly/vvipx" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR SLOT TEXAS189 ⭐️</a>
-                    <a href="https://t.ly/vvipx" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN SLOT TEXAS189 💸</a>
+                    <a href="https://t.ly/vipxx" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR SLOT TEXAS189 ⭐️</a>
+                    <a href="https://t.ly/vipxx" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN SLOT TEXAS189 💸</a>
                 </div>
             </div>
             <center><amp-audio id="pemula" src="https://serverluarvvip.site/abc.mp3" preload="metadata" autoplay loop controlsList>
