--- a/index.html
+++ b/index.html
@@ -1166,12 +1166,12 @@
               <!-- Actions -->
               <div class="header-actions header-actions--right">
                 <div class="header-actions-action header-actions-action--social">
-                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://instagram.com/TEXAS189" target="_blank" aria-label="instagram-unauth">
+                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://instagram.com/TEXAS189" target="_blank" aria-label="instagram-unauth" rel="nofollow">
                     <svg viewBox="23 23 64 64">
                       <use xlink:href="#instagram-unauth-icon" width="110" height="110"></use>
                     </svg>
                   </a>
-                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://youtube.com/TEXAS189" target="_blank" aria-label="youtube-unauth">
+                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://youtube.com/TEXAS189" target="_blank" aria-label="youtube-unauth" rel="nofollow">
                     <svg viewBox="23 23 64 64">
                       <use xlink:href="#youtube-unauth-icon" width="110" height="110"></use>
                     </svg>
@@ -1179,7 +1179,7 @@
                 </div>
                 <div class="showOnMobile">
                   <div class="header-actions-action header-actions-action--cart">
-                    <a href="/cart" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
+                    <a href="https://ftp.ancastercommunityskatingprogram.com/" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
                       <span class="Cart-inner">
                         <svg class="icon icon--cart" width="61" height="49" viewBox="0 0 61 49">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 2C0.5 1.17157 1.17157 0.5 2 0.5H13.6362C14.3878 0.5 15.0234 1.05632 15.123 1.80135L16.431 11.5916H59C59.5122 11.5916 59.989 11.8529 60.2645 12.2847C60.54 12.7165 60.5762 13.2591 60.3604 13.7236L50.182 35.632C49.9361 36.1614 49.4054 36.5 48.8217 36.5H18.0453C17.2937 36.5 16.6581 35.9437 16.5585 35.1987L12.3233 3.5H2C1.17157 3.5 0.5 2.82843 0.5 2ZM16.8319 14.5916L19.3582 33.5H47.8646L56.6491 14.5916H16.8319Z" />
@@ -1198,7 +1198,7 @@
                 </div>
                 <div class="showOnDesktop">
                   <div class="header-actions-action header-actions-action--cart">
-                    <a href="/cart" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
+                    <a href="https://ftp.ancastercommunityskatingprogram.com/" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
                       <span class="Cart-inner">
                         <svg class="icon icon--cart" width="61" height="49" viewBox="0 0 61 49">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 2C0.5 1.17157 1.17157 0.5 2 0.5H13.6362C14.3878 0.5 15.0234 1.05632 15.123 1.80135L16.431 11.5916H59C59.5122 11.5916 59.989 11.8529 60.2645 12.2847C60.54 12.7165 60.5762 13.2591 60.3604 13.7236L50.182 35.632C49.9361 36.1614 49.4054 36.5 48.8217 36.5H18.0453C17.2937 36.5 16.6581 35.9437 16.5585 35.1987L12.3233 3.5H2C1.17157 3.5 0.5 2.82843 0.5 2ZM16.8319 14.5916L19.3582 33.5H47.8646L56.6491 14.5916H16.8319Z" />
@@ -1278,12 +1278,12 @@
               <!-- Actions -->
               <div class="header-actions header-actions--right">
                 <div class="header-actions-action header-actions-action--social">
-                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://instagram.com/TEXAS189" target="_blank" aria-label="instagram-unauth">
+                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://instagram.com/TEXAS189" target="_blank" aria-label="instagram-unauth" rel="nofollow">
                     <svg viewBox="23 23 64 64">
                       <use xlink:href="#instagram-unauth-icon" width="110" height="110"></use>
                     </svg>
                   </a>
-                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://youtube.com/TEXAS189 target="_blank" aria-label="youtube-unauth">
+                  <a class="icon icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://youtube.com/TEXAS189 target="_blank" aria-label="youtube-unauth" rel="nofollow">
                     <svg viewBox="23 23 64 64">
                       <use xlink:href="#youtube-unauth-icon" width="110" height="110"></use>
                     </svg>
@@ -1291,7 +1291,7 @@
                 </div>
                 <div class="showOnMobile">
                   <div class="header-actions-action header-actions-action--cart">
-                    <a href="/cart" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
+                    <a href="https://ftp.ancastercommunityskatingprogram.com/" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
                       <span class="Cart-inner">
                         <svg class="icon icon--cart" width="61" height="49" viewBox="0 0 61 49">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 2C0.5 1.17157 1.17157 0.5 2 0.5H13.6362C14.3878 0.5 15.0234 1.05632 15.123 1.80135L16.431 11.5916H59C59.5122 11.5916 59.989 11.8529 60.2645 12.2847C60.54 12.7165 60.5762 13.2591 60.3604 13.7236L50.182 35.632C49.9361 36.1614 49.4054 36.5 48.8217 36.5H18.0453C17.2937 36.5 16.6581 35.9437 16.5585 35.1987L12.3233 3.5H2C1.17157 3.5 0.5 2.82843 0.5 2ZM16.8319 14.5916L19.3582 33.5H47.8646L56.6491 14.5916H16.8319Z" />
@@ -1310,7 +1310,7 @@
                 </div>
                 <div class="showOnDesktop">
                   <div class="header-actions-action header-actions-action--cart">
-                    <a href="/cart" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
+                    <a href="https://ftp.ancastercommunityskatingprogram.com/" class="cart-style-icon icon--stroke icon--fill icon--cart sqs-custom-cart  header-icon  show-empty-cart-state cart-quantity-zero header-icon-border-shape-none header-icon-border-style-outline">
                       <span class="Cart-inner">
                         <svg class="icon icon--cart" width="61" height="49" viewBox="0 0 61 49">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 2C0.5 1.17157 1.17157 0.5 2 0.5H13.6362C14.3878 0.5 15.0234 1.05632 15.123 1.80135L16.431 11.5916H59C59.5122 11.5916 59.989 11.8529 60.2645 12.2847C60.54 12.7165 60.5762 13.2591 60.3604 13.7236L50.182 35.632C49.9361 36.1614 49.4054 36.5 48.8217 36.5H18.0453C17.2937 36.5 16.6581 35.9437 16.5585 35.1987L12.3233 3.5H2C1.17157 3.5 0.5 2.82843 0.5 2ZM16.8319 14.5916L19.3582 33.5H47.8646L56.6491 14.5916H16.8319Z" />
@@ -1539,14 +1539,14 @@
                 </div>
                 <div class="header-menu-actions social-accounts">
                   <div class="header-menu-actions-action header-menu-actions-action--social mobile">
-                    <a class="icon icon--lg icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://instagram.com/TEXAS189" target="_blank" aria-label="instagram-unauth">
+                    <a class="icon icon--lg icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://instagram.com/TEXAS189" target="_blank" aria-label="instagram-unauth" rel="nofollow">
                       <svg viewBox="23 23 64 64">
                         <use xlink:href="#instagram-unauth-icon" width="110" height="110"></use>
                       </svg>
                     </a>
                   </div>
                   <div class="header-menu-actions-action header-menu-actions-action--social mobile">
-                    <a class="icon icon--lg icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://youtube.com/TEXAS189" target="_blank" aria-label="youtube-unauth">
+                    <a class="icon icon--lg icon--fill  header-icon header-icon-border-shape-none header-icon-border-style-outline" href="http://youtube.com/TEXAS189" target="_blank" aria-label="youtube-unauth" rel="nofollow">
                       <svg viewBox="23 23 64 64">
                         <use xlink:href="#youtube-unauth-icon" width="110" height="110"></use>
                       </svg>
